--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
     --transparent-50: rgba(255, 255, 255, 0.5); /* Transparent White 50%*/
     --transparent-20: rgba(255, 255, 255, 0.2); /* Transparent White 20%*/
     --transparent-10: rgba(255, 255, 255, 0.1); /* Transparent White 10% */
+    --dark-transparent: rgba(0, 0, 0, 0.3); /* Transparent White 10% */
     --radius: 0.5rem;
   }
 }
