style: implement horizontal scroll for pillbars

--- a/src/index.css
+++ b/src/index.css
@@ -98,6 +98,15 @@
   border-radius: 100px;
 }
 
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+
+
 /* Firefox */
 * {
   scrollbar-width: medium;
