--- a/src/index.css
+++ b/src/index.css
@@ -88,16 +88,16 @@
 }
 
 /* Scrollbar Styling === */
-::-webkit-scrollbar {
+.chat-scroll::-webkit-scrollbar {
   width: 8px;
   height: 8px;
 }
 
-::-webkit-scrollbar-track {
+.chat-scroll::-webkit-scrollbar-track {
   background: transparent;
 }
 
-::-webkit-scrollbar-thumb {
+.chat-scroll::-webkit-scrollbar-thumb {
   background-color: var(--transparent-10);
   border-radius: 100px;
 }
